# ros2robot

./: LICENSE  README.md
robot_control_host/: CMakeLists.txt  colcon.pkg  launch_controller.py  package.xml  robot_control_host.cpp  robot_control_host.hpp  runcontroller.sh  xboxc_constants.hpp
robot_drive_host/: .cproject  .project  CMakeLists.txt  SimpleTimer.hpp  package.xml  robot_drive_host.cpp
robot_drive_host/motor_hat/: ugeek_motor_hat.cpp  ugeek_motor_hat.hpp
robot_jazzy_drive_host/: CMakeLists.txt  package.xml  robot_drive_host.cpp
robot_jazzy_drive_host/motor_hat/: ugeek_motor_hat.hpp
robot_jazzy_drive_host/pwm/: pca6895.cpp  pca6895.hpp
robot_jazzy_drive_host/serial/: mdds30.cpp  mdds30.hpp
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: ArmTelemetry.msg  DriveMessage.msg  PanTilt.msg  RobotHeartbeat.msg
robot_ptz_control/: CMakeLists.txt  package.xml  robot_ptz_host.cpp  robot_ptz_host.h
robot_shared/: .package.xml.swp  CMakeLists.txt  package.xml
robot_shared/include/: pca6895.hpp
robot_shared/motor_hat/: ugeek_motor_hat.cpp
robot_shared/pwm/: pca6895.cpp
robot_shared/serial/: mdds30.cpp
scripts/: .autotools  .cproject  .project  FindWiringPi.cmake  copysshkey  deploy_drive_module.sh  gst-server.sh  gstserversource  guienable  jazzyviewstream  startrobotcontrol  viewstream
scripts/deployment/: generate_drive_module_package.sh  packageanddeploy.sh
scripts/devscripts/: crosscompilecommand  localcompilecommand
scripts/dockerscripts/: colcondefaults.yml  custom_setup.sh
scripts/lib/systemd/system/: robotcontrol.service  webcamserver.service
scripts/localinstallscripts/: install_package.sh  packageanddeploy.sh
scripts/localuserbin/: crosscompilecommand  localcompilecommand  startrobotcontrol  stoprobotcontrol
scripts/sample_system_files/: rpi_net_plan.yaml
scripts/target_system/drive_module_rpi/lib/systemd/system/: robotdrivehost.service  robotmaincamera.service  robotptzhost.service  robotpwmdrivehost.service
scripts/target_system/drive_module_rpi/opt/cotsbot/: cotsbot_env_setup.sh  cotsbot_env_vars.sh  launch.xml  pishutdown.py  runcontrolhost.sh  rundrivehost.sh  runmodule.sh  runptzhost.sh  runpwmdrivehost.sh  runrtspserver.sh  settings.ini
scripts/target_system/drive_module_rpi/opt/cotsbot/lib/: libgstrtspserver-1.0.so.0.1405.0
scripts/target_system/drive_module_rpi/usr/lib/systemd/system/: robotdrivehost.service  robotmaincamera.service  robotpowerbutton.service  robotptzhost.service  robotpwmdrivehost.service
