<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lalosoft_robot_shared</name>
  <version>0.0.0</version>
  <description>robot Shared code</description>
  <maintainer email="caseyg@lalosoft.com">Casey Gregoire</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
